2003-07-17  Eric B. Weddington  <eric@ecentral.com>

	New functions eeprom_write_word and eeprom_write_block from
	Artur Lipowski <LAL@pro.onet.pl>
	* libc/misc/eeprom.S: New functions, add const to parameters of read
	functions.
	* libc/misc/eeprom_ww.S: New file.
	* libc/misc/eeprom_wblk.S: New file.
	* include/avr/eeprom.h: New functions.
	* libc/misc/Makefile.am: Add new modules.
	NEWS: Note about new functions.
	
2003-07-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Fix doxygen.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* include/string.h: Add declarations of new functions from Reiner.
	* include/avr/pgmspace.h: ditto.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* libc/misc/itoa.S: Fix for bug #4010 from Reiner Patommel.
	* libc/misc/ltoa.S: ditto
	* libc/misc/ultoa.S: ditto
	* libc/misc/utoa.S: ditto
	* include/stdlib.h: Update doxygen for these functions.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atoi.S: Fix bug with extra text.

2003-06-19  Eric B. Weddington  <eric@ecentral.com>

	New string functions from Reiner Patommel.
	* libc/string/strlcat.S: Add file.
	* libc/string/strlcpy.S: Add file.
	* libc/string/strsep.S: Add file.
	* libc/string/strtok_r.S: Add file.
	* libc/string/Makefile.am: Modify for new functions.
	* libc/pmstring/strlcat_P.S: Add file.
	* libc/pmstring/strlcpy_P.S: Add file.
	* libc/pmstring/strncat_P.S: Add file.
	* libc/pmstring/Makefile.am: Modify for new functions.
	* doc/TODO: Remove item about optimize strlcpy, strlcat.
	* NEWS: Note about new functions.

2003-06-18  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atol.S: Fix for Bug #3576, by Reiner Patommel.

2003-06-18  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atoi.S: Fix for Bug #3575, by Reiner Patommel.

2003-06-17  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/interrupt.h: Fix for bug #3508.

2003-06-17  Eric B. Weddington  <eric@ecentral.com>
